Change definiton of Parked Vehicles
Makes sure that vehicles at remote Settlements are loaded as part of #1324

Changes:
- Settlement get parked Vehicles from teh neaar vicinity list; this ensure remote visting vehicles are considered parked
- CommerceUtil handles a Settlement having no valid trading options